--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,4 @@ EXA_API_KEY=1234567890
 ASKNEWS_CLIENT_ID=1234567890
 ASKNEWS_SECRET=1234567890
 ANTHROPIC_API_KEY=1234567890
+FORECAST_ENSEMBLE_SIZE=0
